# Triangoli_esame

triangoli-master/: README.md
triangoli-master/Programma/: CMakeLists.txt  clang-format  triangoli.cpp  triangoli.h
triangoli-master/triangoli-master/Programma/: triangoli.cpp  triangoli.h
